Replace checks for ending slash in file paths with runtime assertions https://bugs.webkit.org/show_bug.cgi?id=253253

Reviewed by Alexey Proskuryakov.

This issue has been long fixed on iOS Simulator. Therefore, this check
is safe to turn into a runtime assertion.

* Source/WTF/wtf/cocoa/FileSystemCocoa.mm:(openTemporaryFile): Change
  temporaryFilePath.last() check to a runtime assertion.

* Source/WebKit/Shared/Cocoa/SandboxExtensionCocoa.mm:(createHandleForTemporaryFile): Ditto.

Canonical link: https://commits.webkit.org/261246@main